plugins {
    id 'java'
    id 'org.jetbrains.kotlin.jvm' version '1.6.10'
}

group 'com.duckly.jbcef'
version '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

compileKotlin {
    kotlinOptions.jvmTarget = JavaVersion.VERSION_1_8
}

compileTestKotlin {
    kotlinOptions.jvmTarget = JavaVersion.VERSION_1_8
}


dependencies {
    compileOnly 'org.jetbrains:annotations:22.0.0'
    api project(path: ':jcef-library', configuration: 'shadow')
    api project(path: ':ideaIC-library', configuration: 'shadow')
    implementation 'org.jetbrains.kotlin:kotlin-stdlib'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
}

repositories {
    mavenCentral()
}

test {
    useJUnitPlatform()
}
